--- a/index (1).html
+++ b/index (1).html
@@ -160,7 +160,7 @@
     <h2 style="text-align:center;">Painting Exhibit</h2>
     <div class="gallery">
       <div class="gallery-item" onclick="goToScanner('painting1')">
-        <img src="c:\Users\ACER\Downloads\painting of Mr & Mrs Ramos.jpg" alt="Painting 1"><p>Painting of Mr&Mrs Ramos</p>
+        <img src="c:\Users\ACER\Downloads\museoARwebsite\painting of Mr & Mrs Ramos.jpg" alt="Painting 1"><p>Painting of Mr&Mrs Ramos</p>
       </div>
       <div class="gallery-item" onclick="goToScanner('painting2')">
         <img src="painting2.jpg" alt="Painting 2"><p>Festival Dance</p>
@@ -175,11 +175,11 @@
     <div class="back-arrow" onclick="showPage('gallery')">←</div>
     <h2 style="text-align:center;">Artifacts Exhibit</h2>
     <div class="gallery">
-      <div class="gallery-item" onclick="goToScanner('artifact2')">
-        <img src="c:\Users\ACER\Downloads\jar.jpeg" alt="Artifact 1"><p>Jar</p>
+      <div class="gallery-item" onclick="goToScanner('artifact1')">
+        <img src="c:\Users\ACER\Downloads\museoARwebsite\jar.jpeg" alt="Artifact 1"><p>Jar</p>
       </div>
-        <div class="gallery-item" onclick="goToScanner('artifact3')">
-        <img src="c:\Users\ACER\Downloads\talibong.jpeg" alt="Artifact 2"><p>Talibong</p>
+        <div class="gallery-item" onclick="goToScanner('artifact2')">
+        <img src="c:\Users\ACER\Downloads\museoARwebsite\talibong.jpeg" alt="Artifact 2"><p>Talibong</p>
       </div>
     </div>
   </div>
