--- a/index (1).html
+++ b/index (1).html
@@ -128,14 +128,15 @@
       and engaging displays that blend real and virtual elements.</p>
       <p>This approach allows for unique experiences that traditional exhibits cannot provide,
       using smartphones or tablets to enhance collections and provide interactive learning.</p>
+      <div class="back-arrow" onclick="showPage('dashboard')">←</div>
 
       <h2 style="text-align:center;">How to use the application</h2>
-      <div class="step"><p>1. Go to Museum Content and press.</p><img src="image1.jpg" alt="Step 1"></div>
-      <div class="step"><p>2. Select the gallery you want to choose and press.</p><img src="image2.jpg" alt="Step 2"></div>
-      <div class="step"><p>3. Choose any content you prefer and press.</p><img src="painting.jpg" alt="Painting"></div>
-      <div class="step"><p>4. Press the QR Camera Scanner icon.</p><img src="scanner.png" alt="QR Scanner"></div>
-      <div class="step"><p>5. Scan the QR code located at the Aklan Museum.</p><img src="qr1.png" alt="QR 1"></div>
-      <div class="step"><p>6. Wait until the link appears, then click it.</p><img src="qr2.png" alt="QR 2"></div>
+      <div class="step"><p>1. Go to Museum Content and press.</p><img src="step 1.png" alt="Step 1"></div>
+      <div class="step"><p>2. Select the gallery you want to choose and press.</p><img src="step 2.png" alt="Step 2"></div>
+      <div class="step"><p>3. Choose any content you prefer and press.</p><img src="step 3.png" alt="Painting"></div>
+      <div class="step"><p>4. Press the QR Camera Scanner icon.</p><img src="step 4.png" alt="QR Scanner"></div>
+      <div class="step"><p>5. Scan the QR code located at the Aklan Museum.</p><img src="step 5.png" alt="QR 1"></div>
+      <div class="step"><p>6. Wait until the link appears, then click it.</p><img src="step 6.png" alt="QR 2"></div>
       <div class="step"><p>7. Enjoy the artifact details, description, and audio.</p><img src="qr3.png" alt="QR 3"></div>
 
       <button class="btn" onclick="showPage('gallery')">Museum Contents</button>
@@ -244,3 +245,4 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
