--- a/index (1).html
+++ b/index (1).html
@@ -85,7 +85,7 @@
   /* ABOUT PAGE */
   .about-title {
     background: #fff;
-    padding: 15px;
+    padding: 10px;
     font-size: 22px;
     font-weight: bold;
     position: sticky;
@@ -103,7 +103,7 @@
 <body>
 
 <header>
-  <img src="provinceofaklan.jpeg" alt="Museo Logo">
+  <img src="provincialofaklan.png" alt="Museo Logo">
   <div class="center-container">
     <h1>Museo It Akean</h1>
     <p>Province of Aklan</p>
@@ -138,8 +138,8 @@
       <div class="step"><p>5. Scan the QR code located at the Aklan Museum.</p><img src="step 5.png" alt="QR 1"></div>
       <div class="step"><p>6. Wait until the link appears, then click it.</p><img src="step 6.png" alt="QR 2"></div>
       <div class="step"><p>7. Enjoy the artifact details, description, and audio.</p><img src="qr3.png" alt="QR 3"></div>
-
       <button class="btn" onclick="showPage('gallery')">Museum Contents</button>
+
     </div>
   </div>
 </div>
@@ -245,4 +245,5 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
 
