--- a/index (1).html
+++ b/index (1).html
@@ -138,6 +138,7 @@
       <div class="step"><p>5. Scan the QR code located at the Aklan Museum.</p><img src="step 5.png" alt="QR 1"></div>
       <div class="step"><p>6. Wait until the link appears, then click it.</p><img src="step 6.png" alt="QR 2"></div>
       <div class="step"><p>7. Enjoy the artifact details, description, and audio.</p><img src="qr3.png" alt="QR 3"></div>
+      <div class="scrollable">
       <button class="btn" onclick="showPage('gallery')">Museum Contents</button>
 
     </div>
@@ -245,5 +246,6 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
 
 
