--- a/index (1).html
+++ b/index (1).html
@@ -129,6 +129,7 @@
       using smartphones or tablets to enhance collections and provide interactive learning.</p>
       <div class="back-arrow" onclick="showPage('dashboard')">←</div>
 
+      <button class="btn" onclick="showPage('gallery')">Museum Contents</button>
       <h2 style="text-align:center;">How to use the application</h2>
       <div class="step"><p>1. Go to Museum Content and press.</p><img src="step 1.png" alt="Step 1"></div>
       <div class="step"><p>2. Select the gallery you want to choose and press.</p><img src="step 2.png" alt="Step 2"></div>
@@ -137,7 +138,6 @@
       <div class="step"><p>5. Scan the QR code located at the Aklan Museum.</p><img src="step 5.png" alt="QR 1"></div>
       <div class="step"><p>6. Wait until the link appears, then click it.</p><img src="step 5.png" alt="QR 2"></div>
       <div class="step"><p>7. Enjoy the artifact details, description, and audio.</p><img src="step 6.png" alt="QR 3"></div>
-      <div class="scrollable">
       <button class="btn" onclick="showPage('gallery')">Museum Contents</button>
 
     </div>
@@ -245,6 +245,7 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
 
 
 
