--- a/index (1).html
+++ b/index (1).html
@@ -180,7 +180,7 @@
         <img src="painting of Mr & Mrs Ramos.jpg" alt="Painting 1"><p>Painting of Mr&Mrs Ramos</p>
       </div>
       <div class="gallery-item" onclick="goToScanner('painting2')">
-        <img src="painting2.jpg" alt="Painting 2"><p>Festival Dance</p>
+        <img src="Gariel reyes.jpg" alt="Painting 2"><p>Painting of Gariel Reyes</p>
       </div>
     </div>
   </div>
@@ -261,6 +261,7 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
 
 
 
