--- a/index (1).html
+++ b/index (1).html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Museo It Akean</title>
+    <!-- Standard favicon (browser tab) -->
+  <link rel="icon" type="image/png" href="icons/barcode.png">
+
+  <!-- iOS / Android home screen icon -->
+  <link rel="apple-touch-icon" href="icons/barcode.png">
+
+  <!-- Progressive Web App (PWA) manifest (optional, for installable apps) -->
+  <link rel="manifest" href="manifest.json">
 <link rel="shortcut icon" href="provinceofaklan.jpeg" type="image/x-icon">
 <script src="https://unpkg.com/html5-qrcode"></script>
 <style>
@@ -261,6 +269,7 @@ function qrSuccess(decodedText) {
 </body>
 
 </html>
+
 
 
 
